crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_html__basic_v_html.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<div v-html=\"content\"></div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_attrs)}><div>${(_ctx.content) ?? ''}</div></div>`)
}
